[project]
name = "clustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.135.2",
    "hdbscan>=0.8.41",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "uvicorn[standard]>=0.42.0",
]
